force-app/main/default/objects/Quote__c/fields/Sales_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Name__c</fullName>
    <formula>Owner:User.Manager.FirstName + &apos; &apos;+ Owner:User.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Manager Name</label>
    <type>Text</type>
</CustomField>