force-app/main/default/objects/Quote__c/fields/SGST__c.field-meta.xml
<CustomField>
    <fullName>SGST__c</fullName>
    <formula>Total_Cost_Before_Taxes1__c * SGST_in__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SGST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>