force-app/main/default/objects/Quote__c/fields/SGST_in__c.field-meta.xml
<CustomField>
    <fullName>SGST_in__c</fullName>
    <formula>Unit__r.SGST_in__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SGST in %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>