force-app/main/default/objects/Quote__c/fields/Sub_total__c.field-meta.xml
<CustomField>
    <fullName>Sub_total__c</fullName>
    <formula>Basic_cost_with_CP__c +  Total_Infrastructure_Charges__c +  Legal_Documentation_Charges1__c +  CMWSSB_TNEB_and_other_Charges1__c +  Clubhouse_Charges1__c + 
Floor_Rise_Charges_from_6th_Floor__c +Piped_Gas__c+  Amenities_charge1__c +  Interior_Charges1__c + Extra_car_parking_charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>