force-app/main/default/objects/Quote__c/fields/Super_built_up_area__c.field-meta.xml
<CustomField>
    <fullName>Super_built_up_area__c</fullName>
    <formula>Unit__r.Super_built_up_area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Super built-up area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>