force-app/main/default/objects/Quote__c/fields/TBCB__c.field-meta.xml
<CustomField>
    <fullName>TBCB__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TBCB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>