force-app/main/default/objects/Quote__c/fields/Terrace__c.field-meta.xml
<CustomField>
    <fullName>Terrace__c</fullName>
    <label>Terrace</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>