force-app/main/default/objects/Quote__c/fields/Terrace_Area__c.field-meta.xml
<CustomField>
    <fullName>Terrace_Area__c</fullName>
    <formula>Unit__r.Terrace_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Terrace Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>