force-app/main/default/objects/Quote__c/fields/Terrace_Area_Charges__c.field-meta.xml
<CustomField>
    <fullName>Terrace_Area_Charges__c</fullName>
    <formula>if(TEXT(Project__c) == &apos;Whispering Petals&apos;,( (Final_Rate_Per_Sqft__c)/2) *  Unit__r.Terrace_Area__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Terrace Area Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>