force-app/main/default/objects/Quote__c/fields/TerraceCharges__c.field-meta.xml
<CustomField>
    <fullName>TerraceCharges__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TerraceCharges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>