force-app/main/default/objects/Quote__c/fields/Total_Basic_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Basic_Cost__c</fullName>
    <formula>IF(Property_Type_For__c == &apos;Villa&apos;,Basic_Cost__c, Basic_Cost__c + Club_Amenities_Charges__c + Car_Scooter_Parking__c + Water_Electricity_Charges__c + Generator_STP__c+Other_Charges__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Basic Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>