force-app/main/default/objects/Quote__c/fields/Total_Basic_Cost_TEXT__c.field-meta.xml
<CustomField>
    <fullName>Total_Basic_Cost_TEXT__c</fullName>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Basic Cost(TEXT)</label>
    <type>Text</type>
</CustomField>