force-app/main/default/objects/Quote__c/fields/Total_Consideration_with_taxes_and_other__c.field-meta.xml
<CustomField>
    <fullName>Total_Consideration_with_taxes_and_other__c</fullName>
    <formula>CGST__c + SGST__c + Total_Cost_Before_Taxes1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Consideration with taxes and other</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>