force-app/main/default/objects/Quote__c/fields/Total_Construction_Agreement_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Construction_Agreement_Value__c</fullName>
    <formula>Construction_Cost__c +  Club_Amenities_Charges__c +  Water_Electricity_Charges__c +  Generator_STP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Construction Agreement Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>