force-app/main/default/objects/Quote__c/fields/Total_Construction_Cost_With_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Construction_Cost_With_Tax__c</fullName>
    <formula>Construction_Cost__c + GST_5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Construction Cost With Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>