force-app/main/default/objects/Quote__c/fields/Total_Cost_1234__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_1234__c</fullName>
    <formula>(Built_up_area__c * (Rate_per_sqft__c + Scheme_Amount__c + Floor_Raise__c + PLC__c - CP_Discount__c - Discount__c)) + Terrace_Area_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost 1234</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>