force-app/main/default/objects/Quote__c/fields/Total_Cost_After_Discount_Ex_Leg_Main__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_After_Discount_Ex_Leg_Main__c</fullName>
    <formula>/*IF(Property_Type_For__c = &apos;Villa&apos;,Total_Basic_Cost__c+ (Total_Basic_Cost__c * GST1__c) ,Total_Basic_Cost__c +  (Total_Basic_Cost__c * GST1__c) +  (Total_Basic_Cost__c * 0.7)/100)
Total_Basic_Cost__c +*/ GST_5__c + Lab_Cess__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost After Discount(Ex. Leg/Main))</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>