force-app/main/default/objects/Quote__c/fields/Total_Cost_Before_Taxes1__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Before_Taxes1__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost Before Taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>