force-app/main/default/objects/Quote__c/fields/Total_Cost_Before_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Before_Taxes__c</fullName>
    <formula>TEXT(Total_Cost_Before_Taxes1__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost Before Taxes</label>
    <type>Text</type>
</CustomField>