force-app/main/default/objects/Quote__c/fields/Total_Cost_for_Construction__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_for_Construction__c</fullName>
    <formula>TEXT(0.4* GRAND_TOTAL__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost for Construction</label>
    <type>Text</type>
</CustomField>