force-app/main/default/objects/Quote__c/fields/Total_Cost_of_the_Flat__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_of_the_Flat__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost of the Flat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>