force-app/main/default/objects/Quote__c/fields/Total_Cost_Plot_Development__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Plot_Development__c</fullName>
    <formula>TEXT(0.6* GRAND_TOTAL__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost Plot &amp; Development</label>
    <type>Text</type>
</CustomField>