force-app/main/default/objects/Quote__c/fields/Total_E__c.field-meta.xml
<CustomField>
    <fullName>Total_E__c</fullName>
    <formula>Total_Corpus_Fund__c + Total_Maintenance_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total(E)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>