force-app/main/default/objects/Quote__c/fields/Total_Infrastructure_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_Infrastructure_Charges__c</fullName>
    <formula>Infrastructure_Charges_per_sqft__c * Built_up_area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Infrastructure Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>