force-app/main/default/objects/Quote__c/fields/Total_Maintenance_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_Maintenance_Charge__c</fullName>
    <formula>Maintenance_Charge__c * Built_up_area__c*12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Maintenance Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>