force-app/main/default/objects/Quote__c/fields/Total_Other_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_Other_Charges__c</fullName>
    <formula>Club_House__c + Legal_Documentation_Charges__c +  Total_Infrastructure_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Other Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>