force-app/main/default/objects/Quote__c/fields/Total_Other_Charges_TEXT__c.field-meta.xml
<CustomField>
    <fullName>Total_Other_Charges_TEXT__c</fullName>
    <formula>TEXT( Total_Other_Charges__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Other Charges(TEXT)</label>
    <type>Text</type>
</CustomField>