force-app/main/default/objects/Quote__c/fields/Total_Payment_Percent__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Payment Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>