force-app/main/default/objects/Quote__c/fields/Towards_the_Completion_of_Block_Work__c.field-meta.xml
<CustomField>
    <fullName>Towards_the_Completion_of_Block_Work__c</fullName>
    <formula>TEXT((1-Percentage__c)*0.1* GRAND_TOTAL__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Towards the Completion of Block Work</label>
    <type>Text</type>
</CustomField>