force-app/main/default/objects/Quote__c/fields/Towards_the_Completion_of_First_Floor__c.field-meta.xml
<CustomField>
    <fullName>Towards_the_Completion_of_First_Floor__c</fullName>
    <formula>TEXT((1-Percentage__c)*0.16* GRAND_TOTAL__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Towards the Completion of First Floor</label>
    <type>Text</type>
</CustomField>