force-app/main/default/objects/Quote__c/fields/Towards_the_Completion_of_Foundation__c.field-meta.xml
<CustomField>
    <fullName>Towards_the_Completion_of_Foundation__c</fullName>
    <formula>TEXT( GRAND_TOTAL__c * (1-Percentage__c) * 0.16)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Towards the Completion of Foundation</label>
    <type>Text</type>
</CustomField>