force-app/main/default/objects/Quote__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <formula>TEXT(Unit__r.Tower__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tower</label>
    <type>Text</type>
</CustomField>