force-app/main/default/objects/Quote__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Project__c</field>
            <operation>equals</operation>
            <valueField>Plot__c.Project__r.Project__c</valueField>
        </filterItems>
        <filterItems>
            <field>Plot__c.Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Plot__c</referenceTo>
    <relationshipName>Quote</relationshipName>
    <type>Lookup</type>
</CustomField>