force-app/main/default/objects/Quote__c/fields/Unit_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Unit_Checkbox__c</fullName>
    <formula>IF( TEXT(Project__c) ==  TEXT(Unit__r.Project__r.Project__c) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Checkbox</label>
    <type>Checkbox</type>
</CustomField>