force-app/main/default/objects/Quote__c/fields/Voora_Lead__c.field-meta.xml
<CustomField>
    <fullName>Voora_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voora Lead</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Quote</relationshipName>
    <type>Lookup</type>
</CustomField>