force-app/main/default/objects/Quote__c/fields/Water_Electricity_Charges__c.field-meta.xml
<CustomField>
    <fullName>Water_Electricity_Charges__c</fullName>
    <label>Water &amp; Electricity Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>