force-app/main/default/objects/Quote__c/validationRules/Payment_Schedule.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Schedule</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL( Payment_Type__c , &apos;Custom&apos;), ISBLANK( Payment_Schedule_for_Plot_Development__c )  )</errorConditionFormula>
    <errorDisplayField>Payment_Schedule_for_Plot_Development__c</errorDisplayField>
    <errorMessage>Please enter value</errorMessage>
</ValidationRule>