force-app/main/default/objects/Quote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Payment_Type__c</columns>
    <columns>Quote_status__c</columns>
    <columns>Project__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Unit__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>BHK_Type__c</columns>
    <columns>Discount_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Rayeef</value>
    </filters>
    <label>All</label>
</ListView>